fix(arrow): Recenter on mobile version

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -802,5 +802,8 @@ Parallax
         border-radius: 50%;
         font-size: 20px;
     }
+    .arrow {
+        padding-left: 2px;
+    }
 
 }
